[新增]_1.isExisted 判斷傳入的東西是否存在 2. InnerPageBanner [調整]_1.categoryList...放到 NewsContext 中 2. WorldPage 調整 3.自動滾到選到的單選值 [刪除]_DataContext/useData

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NEWS API</title>
+    <meta charset='utf-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title> NEWS API </title>
+    <meta property='og:title' content='NEWS API'/>
+    <meta property='og:site_name' content='NEWS API'/>
+    <meta property='og:description' content='此新聞網站使用 React 框架以及串接 News API 製作而成，感謝您的閱覽。' />
+    <meta property='og:image' content='/home-banner-1x.jpg' />
+    <meta property='og:type' content='website' />
+    <meta name='description' content='此新聞網站使用 React 框架以及串接 News API 製作而成，感謝您的閱覽。' />
+    <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
+    <link rel='apple-touch-icon' href='/favicon.ico' />
   </head>
   <body>
     <div id="root"></div>
